--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,11 @@
 .text-primary {
   color: var(--color-primary) !important;
 }
+
+.btn-primary {
+  color: var(--color-primary) !important;
+}
+
+.btn {
+  font-weight: 500 !important;
+}
