--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,28 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
 :root {
   scroll-behavior: smooth;
+  /* General */
   --color-primary: #b21e2e;
-  /* --color-secondary: #F3C152; */
+  --color-secondary: #f3c152;
+
+  /* Gray */
+  --color-gray: #f3f3f2;
+  --color-bg-gray: #fafbf8;
+  --color-dark-gray: #a1a1a0;
+
+  /* State */
+  --color-danger-sub: #e96f7d;
+
+  --color-black: #050504;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  background: #f6f9ff;
+  font-family: 'Poppins', sans-serif;
+  background: var(--color-bg-gray);
   color: #444444;
 }
 
@@ -30,13 +43,25 @@ a:hover {
   text-decoration: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Nunito', sans-serif;
+/* Component */
+.text-gray {
+  color: var(--color-dark-gray);
+  transition: all 0.2s;
+}
+.text-gray:hover {
+  color: var(--color-black);
+}
+
+.text-danger-sub {
+  color: var(--color-danger-sub);
+  transition: all 0.2s;
+}
+.text-danger-sub:hover {
+  color: var(--bs-danger);
+}
+
+.bg-gray {
+  background-color: var(--color-gray);
 }
 
 /*--------------------------------------------------------------
@@ -65,7 +90,7 @@ h6 {
   font-size: 24px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #012970;
+  color: var(--color-black);
 }
 
 /*--------------------------------------------------------------
@@ -251,15 +276,14 @@ h6 {
 }
 
 .card-title {
-  padding: 20px 0 15px 0;
+  padding: 1.25rem 0 0.5rem 0;
   font-size: 18px;
   font-weight: 500;
-  color: #012970;
-  font-family: 'Poppins', sans-serif;
+  color: var(--color-black);
 }
 
 .card-title span {
-  color: #899bbd;
+  color: var(--color-dark-gray);
   font-size: 14px;
   font-weight: 400;
 }
@@ -275,7 +299,6 @@ h6 {
 /* Alerts */
 .alert-heading {
   font-weight: 500;
-  font-family: 'Poppins', sans-serif;
   font-size: 20px;
 }
 
@@ -300,7 +323,7 @@ h6 {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #012970;
+  color: var(--color-black);
   background-color: #f6f9ff;
 }
 
@@ -324,13 +347,12 @@ h6 {
 /* Breadcrumbs */
 .breadcrumb {
   font-size: 14px;
-  font-family: 'Nunito', sans-serif;
-  color: #899bbd;
+  color: var(--color-dark-gray);
   font-weight: 600;
 }
 
 .breadcrumb a {
-  color: #899bbd;
+  color: var(--color-dark-gray);
   transition: 0.3s;
 }
 
@@ -339,7 +361,7 @@ h6 {
 }
 
 .breadcrumb .breadcrumb-item::before {
-  color: #899bbd;
+  color: var(--color-dark-gray);
 }
 
 .breadcrumb .active {
@@ -376,22 +398,8 @@ h6 {
   line-height: 1;
 }
 
-@media (min-width: 1200px) {
-  .logo {
-    width: 280px;
-  }
-}
-
 .logo img {
-  max-height: 26px;
-  margin-right: 6px;
-}
-
-.logo span {
-  font-size: 26px;
-  font-weight: 700;
-  color: #012970;
-  font-family: 'Nunito', sans-serif;
+  max-height: 3.5rem;
 }
 
 .header {
@@ -399,7 +407,7 @@ h6 {
   z-index: 997;
   height: 60px;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: var(--color-secondary);
   padding-left: 20px;
   /* Toggle Sidebar Button */
   /* Search Bar */
@@ -408,7 +416,7 @@ h6 {
 .header .toggle-sidebar-btn {
   font-size: 2rem;
   cursor: pointer;
-  color: #012970;
+  color: var(--color-black);
 }
 
 .header .search-bar {
@@ -445,7 +453,7 @@ h6 {
 .header .search-form input {
   border: 0;
   font-size: 14px;
-  color: #012970;
+  color: var(--color-black);
   border: 1px solid rgba(1, 41, 112, 0.2);
   padding: 7px 38px 7px 8px;
   border-radius: 3px;
@@ -468,7 +476,7 @@ h6 {
 }
 
 .header .search-form button i {
-  color: #012970;
+  color: var(--color-black);
 }
 
 /*--------------------------------------------------------------
@@ -485,22 +493,27 @@ h6 {
 
 .header-nav .nav-icon {
   font-size: 22px;
-  color: #012970;
+  color: var(--color-black);
   margin-right: 25px;
   position: relative;
 }
 
 .header-nav .nav-profile {
-  color: #012970;
+  color: var(--color-black);
 }
 
 .header-nav .nav-profile img {
-  max-height: 36px;
+  max-height: 40px;
 }
 
 .header-nav .nav-profile span {
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.header-nav .nav-profile .sub-text {
+  font-size: 0.75rem;
+  color: var(--color-primary);
 }
 
 .header-nav .badge-number {
@@ -616,13 +629,13 @@ h6 {
 --------------------------------------------------------------*/
 .sidebar {
   position: fixed;
+  width: 280px;
   top: 60px;
   left: 0;
   bottom: 0;
-  width: 300px;
-  z-index: 996;
+  z-index: 100;
   transition: all 0.3s;
-  padding: 20px;
+  padding: 1.5rem;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
@@ -632,7 +645,7 @@ h6 {
 
 @media (max-width: 1199px) {
   .sidebar {
-    left: -300px;
+    left: -280px;
   }
 }
 
@@ -649,7 +662,7 @@ h6 {
 @media (min-width: 1200px) {
   #main,
   #footer {
-    margin-left: 300px;
+    margin-left: 280px;
   }
 }
 
@@ -666,7 +679,7 @@ h6 {
   }
 
   .toggle-sidebar .sidebar {
-    left: -300px;
+    left: -280px;
   }
 }
 
@@ -687,21 +700,21 @@ h6 {
 }
 
 .sidebar-nav .nav-heading {
-  font-size: 11px;
+  font-size: 0.75rem;
   text-transform: uppercase;
-  color: #899bbd;
-  font-weight: 600;
+  color: #bebebd;
+  font-weight: 500;
   margin: 10px 0 5px 15px;
 }
 
 .sidebar-nav .nav-link {
   display: flex;
   align-items: center;
-  font-size: 15px;
-  font-weight: 600;
-  color: var(--color-primary);
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #fff;
   transition: 0.3;
-  background: #f6f9ff;
+  background: var(--color-primary);
   padding: 10px 15px;
   border-radius: 4px;
 }
@@ -709,25 +722,20 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: var(--color-primary);
 }
 
 .sidebar-nav .nav-link.collapsed {
-  color: #012970;
+  color: var(--color-black);
   background: #fff;
 }
 
 .sidebar-nav .nav-link.collapsed i {
-  color: #899bbd;
+  color: var(--color-black);
 }
 
-.sidebar-nav .nav-link:hover {
-  color: var(--color-primary);
-  background: #f6f9ff;
-}
-
-.sidebar-nav .nav-link:hover i {
-  color: var(--color-primary);
+.sidebar-nav .nav-link.collapsed:hover {
+  color: var(--color-black);
+  background: var(--color-gray);
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -750,7 +758,7 @@ h6 {
   align-items: center;
   font-size: 14px;
   font-weight: 600;
-  color: #012970;
+  color: var(--color-black);
   transition: 0.3;
   padding: 10px 0 10px 40px;
   transition: 0.3s;
@@ -820,24 +828,24 @@ h6 {
 
 .dashboard .info-card h6 {
   font-size: 28px;
-  color: #012970;
+  color: var(--color-black);
   font-weight: 700;
   margin: 0;
   padding: 0;
 }
 
 .dashboard .card-icon {
-  font-size: 32px;
+  font-size: 2rem;
   line-height: 0;
-  width: 64px;
-  height: 64px;
+  width: 4rem;
+  height: 4rem;
   flex-shrink: 0;
   flex-grow: 0;
 }
 
-.dashboard .sales-card .card-icon {
+/* .dashboard .sales-card .card-icon {
   color: var(--color-primary);
-  background: #f6f6fe;
+  background: var(--color-gray);
 }
 
 .dashboard .revenue-card .card-icon {
@@ -848,7 +856,7 @@ h6 {
 .dashboard .customers-card .card-icon {
   color: #ff771d;
   background: #ffecdf;
-}
+} */
 
 /* Activity */
 .dashboard .activity {
@@ -916,7 +924,7 @@ h6 {
 }
 
 .dashboard .news h4 a {
-  color: #012970;
+  color: var(--color-black);
   transition: 0.3s;
 }
 
@@ -936,7 +944,7 @@ h6 {
 }
 
 .dashboard .recent-sales .table thead {
-  background: #f6f6fe;
+  background: var(--color-gray);
 }
 
 .dashboard .recent-sales .table thead th {
@@ -957,7 +965,7 @@ h6 {
 }
 
 .dashboard .top-selling .table thead {
-  background: #f6f6fe;
+  background: var(--color-gray);
 }
 
 .dashboard .top-selling .table thead th {
@@ -988,7 +996,7 @@ h6 {
   background-color: #fff;
   border-radius: 0.25rem;
   text-align: center;
-  color: #012970;
+  color: var(--color-black);
   padding: 15px 0;
 }
 
@@ -1037,7 +1045,7 @@ h6 {
 }
 
 .profile .profile-card .social-links a:hover {
-  color: #012970;
+  color: var(--color-black);
 }
 
 .profile .profile-overview .row {
@@ -1046,7 +1054,7 @@ h6 {
 }
 
 .profile .profile-overview .card-title {
-  color: #012970;
+  color: var(--color-black);
 }
 
 .profile .profile-overview .label {
@@ -1091,7 +1099,7 @@ h6 {
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #012970;
+  color: var(--color-black);
   font-weight: 700;
   margin: 20px 0 10px 0;
 }
@@ -1216,7 +1224,7 @@ h6 {
 .error-404 h2 {
   font-size: 24px;
   font-weight: 700;
-  color: #012970;
+  color: var(--color-black);
   margin-bottom: 30px;
 }
 
@@ -1248,12 +1256,12 @@ h6 {
 
 .footer .copyright {
   text-align: center;
-  color: #012970;
+  color: var(--color-black);
 }
 
 .footer .credits {
   padding-top: 5px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: var(--color-black);
 }
