--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,10 +2,34 @@
   color: var(--color-primary) !important;
 }
 
-.btn-primary {
-  color: var(--color-primary) !important;
+.btn {
+  border: 0;
+  transition: all 0.2s;
+}
+.btn:hover {
+  border: 0;
+}
+.btn:active {
+  border: 0;
 }
 
-.btn {
-  font-weight: 500 !important;
+.btn-primary {
+  color: #fff;
+  background: var(--color-primary);
+}
+.btn-primary:hover {
+  background: var(--color-primary);
+  opacity: 80%;
+}
+.btn-primary:active {
+  background: var(--color-primary) !important;
+  opacity: 100% !important;
+}
+
+.btn-gray {
+  color: var(--color-black);
+  background: var(--color-gray);
+}
+.btn-gray:hover {
+  background: rgba(0, 0, 0, 0.1);
 }
