delete dah bisa

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,10 @@ a:hover {
   background-color: var(--color-gray);
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
