--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,25 @@
+.bg-gray {
+  background-color: var(--color-gray);
+}
+
 .text-primary {
   color: var(--color-primary) !important;
+}
+
+.text-gray {
+  color: var(--color-dark-gray);
+  transition: all 0.2s;
+}
+.text-gray:hover {
+  color: var(--color-black);
+}
+
+.text-danger-sub {
+  color: var(--color-danger-sub);
+  transition: all 0.2s;
+}
+.text-danger-sub:hover {
+  color: var(--bs-danger);
 }
 
 .btn {
@@ -34,6 +54,27 @@
   background: rgba(0, 0, 0, 0.1);
 }
 
+.btn-dark-gray {
+  background: var(--color-dark-gray);
+  color: #fff;
+  transition: all 0.2s;
+}
+.btn-dark-gray:hover {
+  background: var(--color-black);
+  color: #fff;
+}
+
+.btn-danger-sub {
+  background-color: #ffdbdf;
+  color: red;
+  transition: all 0.2s;
+}
+.btn-danger-sub:hover {
+  background-color: var(--bs-danger);
+  color: #ffdbdf;
+  transition: all 0.2s;
+}
+
 .accordion-button {
   width: fit-content;
 }
@@ -42,4 +83,8 @@
   width: 5rem;
   height: min-content;
   border-radius: 0.25rem;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
