--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,12 @@
+a {
+  transition: all 0.2s;
+}
+
+a:hover {
+  color: var(--color-primary);
+  opacity: 75%;
+}
+
 .bg-secondary {
   background-color: var(--color-secondary) !important;
 }
