--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,10 +7,12 @@ a:hover {
   opacity: 75%;
 }
 
+.bg-primary {
+  background-color: var(--color-primary) !important;
+}
 .bg-secondary {
   background-color: var(--color-secondary) !important;
 }
-
 .bg-gray {
   background-color: var(--color-gray);
 }
@@ -22,9 +24,6 @@ a:hover {
 .text-gray {
   color: var(--color-dark-gray);
   transition: all 0.2s;
-}
-.text-gray:hover {
-  color: var(--color-black);
 }
 
 .text-danger-sub {
@@ -44,6 +43,10 @@ a:hover {
 }
 .btn:active {
   border: 0;
+}
+.btn:disabled {
+  background-color: var(--color-gray);
+  color: var(--color-dark-gray);
 }
 
 .btn-primary {
