--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: NiceAdmin - v2.4.1
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -14,7 +7,9 @@
   scroll-behavior: smooth;
   /* General */
   --color-primary: #b21e2e;
+
   --color-secondary: #f3c152;
+  --color-secondary-hover: #e0b350;
 
   /* Gray */
   --color-gray: #f3f3f2;
@@ -92,21 +87,15 @@ a:hover {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: var(--color-primary);
+  background: var(--color-secondary);
+  color: #fff;
   width: 40px;
   height: 40px;
   border-radius: 4px;
   transition: all 0.4s;
 }
 
-.back-to-top i {
-  font-size: 24px;
-  color: #fff;
-  line-height: 0;
-}
-
 .back-to-top:hover {
-  background: #6776f4;
   color: #fff;
 }
 
@@ -392,9 +381,7 @@ a:hover {
   height: 60px;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
   background-color: var(--color-secondary);
-  padding-left: 20px;
-  /* Toggle Sidebar Button */
-  /* Search Bar */
+  padding-left: 0.25rem;
 }
 
 .header .toggle-sidebar-btn {
