--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -102,6 +102,39 @@ a:hover {
   transition: all 0.2s;
 }
 
+.input-container {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 0 0.125rem 0.375rem;
+  border-bottom: 2px solid rgb(194, 194, 194);
+  color: rgb(194, 194, 194);
+  transition: all 0.2s;
+}
+
+.form-control:focus {
+  border-color: var(--color-primary);
+  box-shadow: 0 0 0 0.25rem rgba(253, 13, 13, 0.25);
+}
+
+.form-control-custom {
+  border: none;
+  border-radius: 0;
+  padding: 0;
+}
+
+.form-control-custom:focus {
+  background-color: #fff;
+  border-color: var(--color-black);
+  outline: 0;
+  box-shadow: none;
+}
+
+.input-container:focus-within {
+  color: #212529;
+  border-color: var(--color-black);
+}
+
 .sidebar-btn {
   display: flex;
   align-items: center;
